Change blobs update response in docs

--- a/docs/spec/paths/blobs@{id}.yaml
+++ b/docs/spec/paths/blobs@{id}.yaml
@@ -15,8 +15,17 @@ patch:
               type: object
               $ref: '#/components/schemas/Blobs'
   responses:
-    '204':
+    '200':
       description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                required: true
+                $ref: '#/components/schemas/Blobs'
     '400':
       description: invalid blob id
       content:
