--- a/docs/spec/components/schemas/Blobs.yaml
+++ b/docs/spec/components/schemas/Blobs.yaml
@@ -13,6 +13,7 @@ allOf:
             type: object
             format: json.RawJSON
             description: custom json
+            x-go-package: "encoding/json"
       relationships:
         type: object
         required:
