--- a/docs/spec/paths/blobs@{id}.yaml
+++ b/docs/spec/paths/blobs@{id}.yaml
@@ -38,6 +38,36 @@ patch:
         application/vnd.api+json:
           schema:
             $ref: '#/components/schemas/Errors'
+get:
+  tags:
+    - Blob
+  operationId: getBlobById
+  summary: "Get Blob By Id"
+  description:
+    Get Blob By Id
+  responses:
+    '200':
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                $ref: '#/components/schemas/Blobs'
+    '400':
+      description: invalid blob id
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+    '500':
+      description: failed to get blob by id
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
 delete:
   tags:
     - Blob
